# solved-2048

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  main.cpp
.github/workflows/: cpp-ci.yml
include/: debug.hpp  interrupt_handler.hpp  state.hpp  test_state.hpp  types.hpp  utils.hpp
src/: interrupt_handler.cpp  main.cpp  state.cpp  utils.cpp
tests/: test_state.cpp
